--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
     </div>
     <div class='header-fade-in'>
       <div class='header-inner'>
+        <a class="menu-toggle">
+          <div class="hamburger hamburger-one"></div>
+        </a>
         <div>
           <a href='index.html' class='title'>CVL</a>
         </div>
