--- a/about-us 2.html
+++ b/about-us 2.html
@@ -3,12 +3,12 @@
 <html>
 <head>
   <meta charset='UTF-8'>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
   <meta http-equiv='X-UA-Compatible' content='ie=edge'>
-  <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'/>
   <link rel='stylesheet' href='stylesheet.css'>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&display=swap' rel='stylesheet'>
   <script src='http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
   <script src='script.js'></script>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&display=swap' rel='stylesheet'>
   <link rel='shortcut icon' type='image/png' href='cvl-letter.png'/>
   <title>CVL</title>
 </head>
@@ -36,15 +36,12 @@
         <div class='nav-main'>
           <a href='#' class='nav-title'>EVENTS</a>
           <a href='about-us.html' class='nav-title'>ABOUT US</a>
-          <a href='#' class='nav-title'>HOME</a>
+          <a href='index.html' class='nav-title'>HOME</a>
         </div>
       </div>
     </div>
     <div class='header-fade-in'>
       <div class='header-inner'>
-        <a class="menu-toggle">
-          <div class="hamburger hamburger-one"></div>
-        </a>
         <div>
           <a href='index.html' class='title'>CVL</a>
         </div>
@@ -56,7 +53,7 @@
           <div class='nav-main'>
             <a href='#' class='nav-title'>EVENTS</a>
             <a href='about-us.html' class='nav-title'>ABOUT US</a>
-            <a href='#' class='nav-title'>HOME</a>
+            <a href='index.html' class='nav-title'>HOME</a>
           </div>
         </div>
       </div>
@@ -64,24 +61,60 @@
   </section>
   <section class='main'>
     <div class='main-inner'>
-      <div class='main-top'>
-        <div class='landing-headline'>
-          <div class='landing-headline-inner'>
-            <h1 class='headline'>Building a Better Future</h1>
-          </div>
-        </div>
-        <div class='landing-text'>
-          <div class='landing-text-inner'>
-            <p class='text'>Our comittee, with your help, is dedicated to <br> improving your daily life</p>
-          </div>
-        </div>
-        <div class='landing-button'>
-          <div class='landing-button-inner'>
-            <button type='button' onclick='window.location.href = 'poll.html';' class='poll-button'>Join a Poll</button>
-          </div>
-        </div>
+      <div class='main-team-headline'>
+        <h1 class='team-headline'>Our Team</h1>
       </div>
-      <div class='main-bottom'>
+      <div class='main-team-people'>
+        <div class='person1'>
+          <img src='#'></img>
+          <h1 class='person-name'></h1>
+          <p class='person-bio'></p>
+        </div>
+        <div class='person2'>
+          <img src='#'></img>
+          <h1 class='person-name'></h1>
+          <p class='person-bio'></p>
+        </div>
+        <div class='person3'>
+          <img src='#'></img>
+          <h1 class='person-name'></h1>
+          <p class='person-bio'></p>
+        </div>
+        <div class='person4'>
+          <img src='#'></img>
+          <h1 class='person-name'></h1>
+          <p class='person-bio'></p>
+        </div>
+        <div class='person5'>
+          <img src='#'></img>
+          <h1 class='person-name'></h1>
+          <p class='person-bio'></p>
+        </div>
+        <div class='person6'>
+          <img src='#'></img>
+          <h1 class='person-name'></h1>
+          <p class='person-bio'></p>
+        </div>
+        <div class='person7'>
+          <img src='#'></img>
+          <h1 class='person-name'></h1>
+          <p class='person-bio'></p>
+        </div>
+        <div class='person8'>
+          <img src='#'></img>
+          <h1 class='person-name'></h1>
+          <p class='person-bio'></p>
+        </div>
+        <div class='person9'>
+          <img src='#'></img>
+          <h1 class='person-name'></h1>
+          <p class='person-bio'></p>
+        </div>
+        <div class='person10'>
+          <img src='#'></img>
+          <h1 class='person-name'></h1>
+          <p class='person-bio'></p>
+        </div>
       </div>
     </div>
   </section>
@@ -91,15 +124,6 @@
     </div>
     <div class='body'>
       <p class='body-text'></p>
-    </div>
-  </section>
-  <section class='light-section'>
-    <div class='light-inner'>
-    </div>
-  </section>
-  <section class='footer'>
-    <div class='footer-inner'>
-      <h1 class='footer-title'>Footer</h1>
     </div>
   </section>
   <script src='http://code.jquery.com/jquery-latest.js'></script>
@@ -114,7 +138,7 @@
             }
         });
     });
-})(jQuery);;
+})(jQuery);
 </script>
 </body>
 </html>
