--- a/index.html
+++ b/index.html
@@ -45,9 +45,13 @@
     </div>
     <div class='header-fade-in'>
       <div class='header-inner'>
-        <a class="menu-toggle">
-          <div class="hamburger hamburger-one"></div>
-        </a>
+        <button class="menu-toggle">
+          <svg width="30" height="30" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
+            <path stroke="black" stroke-width="2.3" d="M4 8 L26 8"></path>
+            <path stroke="black" stroke-width="2.3" d="M4 15 L26 15"></path>
+            <path stroke="black" stroke-width="2.3" d="M4 22 L26 22"></path>
+          </svg>
+        </button>
         <div>
           <a href='index.html' class='title'>CVL</a>
         </div>
