--- a/index.html
+++ b/index.html
@@ -95,18 +95,21 @@
   <section class='fill-section'>
     <div class='fill-inner'>
       <h1 class='fill-title'>About Us</h1>
-    </div>
-    <div class='body'>
-      <p class='body-text'></p>
+      <div class='body'>
+        <p class='body-text'>The CVL is a place where students are involved in the decisions of the school. We're here to work on improving the lycée's life, by organizing events, changing school policy and create a dialogue between the school and the students. The CVL, chaired by the head teacher and comprising a high school vice-president, brings together representatives of students, staff and parents who think together and make proposals on topics that affect your daily life.</p>
+      </div>
     </div>
   </section>
   <section class='light-section'>
     <div class='light-inner'>
+      <h1 class="light-title">Dialoguer, échanger, débattre</h1>
+      <div class='light-body'>
+        <p class="light-body-text">Le CVL est un lieu privilégié de dialogue et d’échanges entre lycéens et adultes de la communauté éducative. Vos représentants lycéens s’y expriment librement. Ils font valoir vos points de vue et vos attentes, évoquent vos problèmes et vos préoccupations, échangent des idées, réfléchissent. Ils sont vos porte-parole.</p>
     </div>
   </section>
   <section class='footer'>
     <div class='footer-inner'>
-      <h1 class='footer-title'>Footer</h1>
+      <h1 class='footer-title'>CVL 2019</h1>
     </div>
   </section>
   <script src='https://code.jquery.com/jquery-latest.js'></script>
